# codex-orchestrator

./: AGENTS.md  README.md  findings.md  install.md  progress.md  task_plan.md
.agents/plugins/: marketplace.json
docs/: index.md
docs/architecture/: README.md  agent-contracts.md  bundled-agent-bundle.md  category-contract.md  completion-guard.md  mcp-tool-contract.md  plan-sync-rules.md  question-gate-protocol.md  review-repair-loop.md  runtime-state-schema.md  write-lease-protocol.md
docs/decisions/: 2026-04-08-file-backed-execution-truth.md  README.md
docs/plans/completed/: README.md  (+26 more)
docs/product/: README.md  privacy-policy.md  terms-of-service.md
docs/specs/: 2026-04-08-codex-orchestrator-plugin-design.md  2026-04-09-codex-orchestrator-bundled-agents-design.md  2026-04-09-codex-orchestrator-phase-2-design.md  2026-04-09-codex-orchestrator-phase-3-design.md  2026-04-10-codex-orchestrator-installer-design.md  2026-04-11-codex-orchestrator-codex-guided-install-design.md  2026-04-11-codex-orchestrator-default-workflow-routing-design.md  2026-04-11-codex-orchestrator-delegation-first-dispatch-design.md  2026-04-11-codex-orchestrator-doc-relative-path-policy-design.md  (+17 more)
plugins/codex-orchestrator/rust-cli/: Cargo.toml
plugins/codex-orchestrator/rust-cli/src/: category_registry.rs  doc_drift.rs  lib.rs  main.rs  plan_document.rs  runtime_store.rs  tools.rs  types.rs
plugins/codex-orchestrator/rust-cli/tests/: repo_contracts.rs  runtime_contracts.rs  tools_smoke.rs
scripts/: install-codex-orchestrator.sh
tests/: install-guide.test.ts  install-script.test.ts
(+39 files in other folders)
